--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
     text-align: center;
 }
 
+.Photo {
+    width: 100%;
+    height: 100%;
+}
+
 .App-logo {
     height: 40vmin;
     pointer-events: none;
@@ -15,7 +20,7 @@
 
 .App-header {
     width: 100%;
-    background-color: #282c34;
+    background-color: #fa0505;
     min-height: 40vh;
     display: flex;
     flex-direction: column;
@@ -28,6 +33,13 @@
 .App-link {
     color: #61dafb;
 }
+
+/*.Rectangle {
+    width: 200px;
+    height: 50px;
+    background-color: #ed1331;
+    display: flex;
+}*/
 
 @keyframes App-logo-spin {
     from {
