--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
     width: 100%;
-    background-color: #282c34;
+    background-color: #6e0065;
     min-height: 40vh;
     display: flex;
     flex-direction: column;
@@ -23,6 +23,18 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.Second-header {
+    width: 100%;
+    background-color: #60bdff;
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: rgb(0, 0, 0);
 }
 
 .App-link {
